// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strong [[]] is not strong: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "[[]]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strong Decoration in Strong notation: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "[[",
        "type": "plain",
      },
      Object {
        "decos": Array [
          "!",
        ],
        "nodes": Array [
          Object {
            "text": "deco",
            "type": "plain",
          },
        ],
        "type": "decoration",
      },
      Object {
        "text": "]]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strong Simple strong: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "nodes": Array [
          Object {
            "text": "Simple strong",
            "type": "plain",
          },
        ],
        "type": "strong",
      },
    ],
    "type": "line",
  },
]
`;
